# fastmarketing

./: .gitignore  README.md  agent.py  fastagent.config.yaml  main.py  pyproject.toml
src/: schemas.py
src/constants/: config.py  enums.py
src/crud/: career_website_crud.py  directory_website_crud.py  social_media_crud.py  wordpress_website_crud.py
src/db/: models.py
src/utils/: browswer_utils.py  env_utils.py  google_server_utils.py  llm_utils.py  safe_utils.py  upload_utils.py
src/workflows/: create_accounts.py  google_login.py  publish_post.py  submit_websites.py
src/workflows/directory/: comment.py  parse_directory_websites.py  search_wordpress_websites.py  submit.py
src/workflows/job/: search_career_pages.py
